--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,19 +1,34 @@
-<form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
+<form [formGroup]="registerForm" (ngSubmit)="registerForm.valid && register()" autocomplete="off">
   <h2 class="text-center text-primary"> Sign up</h2>
-  <hr />
+  <hr>
   <div class="form-group">
-    <input type="text" class="form-control" name="username"
-           [(ngModel)]="model.username" placeholder="Username" />
+    <label class="control-label" style="margin-right: 10px;">I am a</label>
+    <label class="radio-inline">
+      <input type="radio" value="male" formControlName="gender" /> Male
+    </label>
+    <label class="radio-inline">
+      <input type="radio" value="female" formControlName="gender" class="ml-3" /> Female
+    </label>
+  </div>
+  <app-text-input [formControl]='registerForm.controls["username"]' [label]='"Username"'></app-text-input>
+  <app-text-input [formControl]='registerForm.controls["knownAs"]' [label]='"known As"'></app-text-input>
+  <app-date-input [formControl]='registerForm.controls["dateOfBirth"]' [maxDate]="maxDate" [label]='"date of birth"'></app-date-input>
+  <app-text-input [formControl]='registerForm.controls["city"]' [label]='"city"'></app-text-input>
+  <app-text-input [formControl]='registerForm.controls["country"]' [label]='"country"'></app-text-input>
+  <app-text-input [formControl]='registerForm.controls["password"]' [label]='"Password"' [type]='"password"'></app-text-input>
+  <app-text-input [formControl]='registerForm.controls["confirmPassword"]' [label]='"Confirm password"' [type]='"password"'></app-text-input>
+
+  <div class="row" *ngIf="validationErrors.length > 0">
+    <ul class="text-danger">
+      <li *ngFor="let error of validationErrors">
+        {{error}}
+      </li>
+    </ul>
   </div>
 
-
-
-  <div class="form-group">
-    <input type="password" class="form-control" name="password"
-           [(ngModel)]="model.password" placeholder="Password" />
-  </div>
   <div class="form-group text-center">
-    <button class="btn btn-success mr-2" type="submit"> Register</button>
+    <button [disabled]="!registerForm.valid" class="btn btn-success mr-2" type="submit"> Register</button>
     <button class="btn btn-default mr-2" type="button" (click)="cancel()"> Cancel</button>
   </div>
 </form>
+
